--- a/chordia-0.0-app/src/TreeVisualization.css
+++ b/chordia-0.0-app/src/TreeVisualization.css
@@ -1,4 +1,7 @@
+
+
 .link {
+    transition: all 0.3s ease;
     fill: none;
     stroke: #196d56; /* Forest green for links */
     stroke-width: 2px;
@@ -8,8 +11,9 @@
   fill: none;
   stroke: #196d56; /* Forest green for links */
   stroke-width: 2px;
-  opacity: 0.3;
+  opacity: 0.0;
 }
+
 
 
   .nodeRect {
@@ -19,23 +23,68 @@
   }
   
   text {
+    transition: all 0.3s ease;
     font: 12px sans-serif;
-    fill: #305d36; /* Dark green text */
+    fill: #096415; /* Dark green text */
   }
 
 .tree-container {
-  display: block;
-  flex: 1;
+  height: 100vh;
   width: 100%;
-  margin: 1%;
-  padding: 1%;
-  border: 1%;
+  display: block;
+  overflow: visible;
 }
 
 
 .node-circle {
+  transition: all 0.3s ease;
   fill: #bbffbb
 }
 
 
-  
+.node-circle.highlighted {
+  stroke: white;
+  Stroke-width: 5;
+  transform: scale(1.2); /* forstørrer noden 1,5 ganger */
+  filter: drop-shadow(0px 0px 5px rgba(0,0,0,0.5))
+}
+
+.node-info {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0); /* Startet som skalert ned */
+  transition: transform 0.5s ease;
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+  z-index: 10; /* Sørg for at boksen ligger over andre elementer */
+  max-height: 80vh;
+  overflow-y: auto; /* Legg til rulling hvis innholdet er for langt */
+  width: 80vw; /* Bredde av boksen */
+}
+
+/* Klassen som aktiveres når en node klikkes */
+.node-info.visible {
+  transform: translate(-50%, -50%) scale(1); /* Skalerer opp til naturlig størrelse */
+}
+
+
+
+#link-info {
+  position: absolute;
+  pointer-events: none;
+  padding: 5px;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  display: none; /* Skjult som standard */
+}
+
+#link-info.hidden {
+  display: none; /* Legg til denne klassen for å skjule informasjonsboksen */
+}
+
+#link-info:not(.hidden) {
+  display: block; /* Fjern 'hidden' klassen for å vise informasjonsboksen */
+}
